--- a/AutomateFlipkart/test-output/old/Scenario1/methods-alphabetical.html
+++ b/AutomateFlipkart/test-output/old/Scenario1/methods-alphabetical.html
@@ -1,2 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Scenario1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="a5dfb9">  <td>22/02/24 01:55:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario1.openFlipkart()[pri:0, instance:com.scripts.Scenario1@3d6f0054]">openFlipkart</td> 
+  <td>TestNG-tests-1@2050207688</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/24 01:55:02</td>   <td>63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario1.scenarioScript1()[pri:0, instance:com.scripts.Scenario1@3d6f0054]">scenarioScript1</td> 
+  <td>TestNG-tests-1@2050207688</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/24 01:55:03</td>   <td>235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario1.setup()[pri:0, instance:com.scripts.Scenario1@3d6f0054]">setup</td> 
+  <td>TestNG-tests-1@2050207688</td>   <td></td> </tr>
+<tr bgcolor="a5dfb9">  <td>22/02/24 01:55:10</td>   <td>7640</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Scenario1.tearDown()[pri:0, instance:com.scripts.Scenario1@3d6f0054]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2050207688</td>   <td></td> </tr>
 </table>
