Script modification, bug fixes, report modification

--- a/AutomateFlipkart/test-output/emailable-report.html
+++ b/AutomateFlipkart/test-output/emailable-report.html
@@ -9,9 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">32,437</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">32,742</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m0">increaseProductPrice</a></td><td rowspan="1">1645653238591</td><td rowspan="1">47</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m1">scenarioScript1</a></td><td rowspan="1">1645653238654</td><td rowspan="1">30836</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m0">increaseProductPrice</a></td><td rowspan="1">1645701733134</td><td rowspan="1">47</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m1">scenarioScript1</a></td><td rowspan="1">1645701733196</td><td rowspan="1">31068</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.scripts.Scenario1#increaseProductPrice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at com.pageObjects.Locator.increaseQuantity(Locator.java:51)
@@ -45,6 +45,6 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.scripts.Scenario1#scenarioScript1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">₹1,29,900<br/>Product Price: ₹1,29,900</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.scripts.Scenario1#scenarioScript1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Product Price on Flipkart: ₹1,29,900</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
