--- a/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
+++ b/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>?1,29,900</td></tr>
-<tr><td>Product Price: ?1,29,900</td></tr>
+<h2>Reporter output</h2><table><tr><td>Product Price on Flipkart: ?1,29,900</td></tr>
 </table>
