--- a/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
+++ b/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,3 @@
-<h2>Reporter output</h2><table><tr><td>Product Price on Flipkart: ?1,29,900</td></tr>
+<h2>Reporter output</h2><table><tr><td>Quantity is not increasing or product is not in stock</td></tr>
+<tr><td>Product Price on Flipkart: Rs 1,39,900</td></tr>
 </table>
