--- a/AutomateFlipkart/test-output/emailable-report.html
+++ b/AutomateFlipkart/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">36,430</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">32,661</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m0">increaseProductPrice</a></td><td rowspan="1">1645761139976</td><td rowspan="1">28</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m1">scenarioScript1</a></td><td rowspan="1">1645761140017</td><td rowspan="1">32696</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m0">increaseProductPrice</a></td><td rowspan="1">1645770146989</td><td rowspan="1">2107</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.scripts.Scenario1</td><td><a href="#m1">scenarioScript1</a></td><td rowspan="1">1645770149112</td><td rowspan="1">29532</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.scripts.Scenario1#increaseProductPrice</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Quantity is not increasing or product is not in stock</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+<h2>Default test</h2><h3 id="m0">com.scripts.Scenario1#increaseProductPrice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at com.pageObjects.Locator.totalPrice(Locator.java:55)
-	at com.scripts.Scenario1.increaseProductPrice(Scenario1.java:89)
+	at com.scripts.Scenario1.increaseProductPrice(Scenario1.java:98)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
