--- a/AutomateFlipkart/test-output/index.html
+++ b/AutomateFlipkart/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse-1546716836\testng-customsuite.xml</span>
+                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse--1248382978\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.scripts.Scenario1" class="method navigator-link" hash-for-method="increaseProductPrice">increaseProductPrice</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.scripts.test" class="method navigator-link" hash-for-method="increaseProductPrice">increaseProductPrice</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -118,7 +118,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.scripts.Scenario1" class="method navigator-link" hash-for-method="scenarioScript1">scenarioScript1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.scripts.test" class="method navigator-link" hash-for-method="scenarioScript1">scenarioScript1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,7 +136,7 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.scripts.Scenario1</span>
+              <span class="class-name">com.scripts.test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -145,8 +145,7 @@
                   </a> <!-- increaseProductPrice -->
                   <span class="method-name">increaseProductPrice</span>
                   <div class="stack-trace">java.lang.NullPointerException
-	at com.pageObjects.Locator.totalPrice(Locator.java:55)
-	at com.scripts.Scenario1.increaseProductPrice(Scenario1.java:98)
+	at com.scripts.test.increaseProductPrice(test.java:49)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -184,7 +183,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.scripts.Scenario1</span>
+              <span class="class-name">com.scripts.test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -199,7 +198,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse-1546716836\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse--1248382978\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,7 +207,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.scripts.Scenario1&quot;/&gt;
+      &lt;class name=&quot;com.scripts.test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -251,17 +250,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'scenarioScript1')
-data.setCell(0, 2, 'com.scripts.Scenario1')
-data.setCell(0, 3, 29532);
+data.setCell(0, 2, 'com.scripts.test')
+data.setCell(0, 3, 13814);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'increaseProductPrice')
-data.setCell(1, 2, 'com.scripts.Scenario1')
-data.setCell(1, 3, 2107);
+data.setCell(1, 2, 'com.scripts.test')
+data.setCell(1, 3, 2031);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -272,12 +271,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">scenarioScript1</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Product Price on Flipkart: Rs 1,39,900</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -293,7 +286,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.scripts.Scenario1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.scripts.test</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
@@ -302,15 +295,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">increaseProductPrice</span>
-                <span class="method-start">923 ms</span>
+                <span class="method-start">1386 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">scenarioScript1</span>
-                <span class="method-start">3046 ms</span>
+                <span class="method-start">3433 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">32601 ms</span>
+                <span class="method-start">17263 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
