--- a/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
+++ b/AutomateFlipkart/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Product Price on Flipkart: Rs 1,39,900</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
