--- a/AutomateFlipkart/test-output/old/Scenario1/classes.html
+++ b/AutomateFlipkart/test-output/old/Scenario1/classes.html
@@ -11,11 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setup</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>openFlipkart</td>
+<td>increaseProductPrice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -24,6 +20,10 @@
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
