--- a/AutomateFlipkart/test-output/old/Scenario1/reporter-output.html
+++ b/AutomateFlipkart/test-output/old/Scenario1/reporter-output.html
@@ -1,1 +1,2 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Product Price on Flipkart: Rs 1,39,900</td></tr>
+</table>
